@@ -3,7 +3,7 @@
 \name{umx_default_option}
 \alias{umx_default_option}
 \alias{umx_match.arg}
-\title{umx_default_option}
+\title{Select first item in list of options, while being flexible about choices.}
 \usage{
 umx_default_option(x, option_list, check = TRUE)
 }
@@ -18,9 +18,8 @@ umx_default_option(x, option_list, check = TRUE)
 - one validated option
 }
 \description{
-Handle parameter options given as a default list in a function.
-This is just a version of x = \code{\link{match.arg}}(x) which
-allows items not in the list.
+Like a smart version of \code{\link{match.arg}}: Handles selecting parameter options when default is a list.
+Unlike  x = \code{\link{match.arg}}(x) this allows items not in the list.
 }
 \examples{
 \dontrun{
