@@ -2,7 +2,7 @@
 % Please edit documentation in R/misc_and_utility.r
 \name{umx_lower2full}
 \alias{umx_lower2full}
-\title{umx_lower2full}
+\title{Convert lower-only matrix data to full (or enforce symmetry on a full matrix)}
 \usage{
 umx_lower2full(lower.data, diag = NULL, byrow = TRUE, dimnames = NULL)
 }
@@ -19,12 +19,34 @@ umx_lower2full(lower.data, diag = NULL, byrow = TRUE, dimnames = NULL)
 - \code{\link{mxMatrix}}
 }
 \description{
-Take a lower triangle of data (for instance from a "lower" \code{\link{mxMatrix}}, or
-as you might find in a journal article), 
-and turn it into a full matrix.
+Takes a vector of the lower-triangle of cells in a matrix as you might read-in
+from a journal article), OR a matrix (for instance from a "lower" \code{\link{mxMatrix}}, 
+and returns a full matrix, copying the lower triangle into the upper.
+}
+\details{
+Can also take a full matrix, which can be useful for enforcing symmetry on a
+nearly-symmetrical matrix.
 }
 \examples{
 
+# 1. Test with a vector in byrow = TRUE order) 
+tmp = c(
+	1.0000, 
+	0.6247, 1.0000,
+	0.3269, 0.3669, 1.0000,
+	0.4216, 0.3275, 0.6404, 1.0000,
+	0.2137, 0.2742, 0.1124, 0.0839, 1.0000,
+	0.4105, 0.4043, 0.2903, 0.2598, 0.1839, 1.0000,
+	0.3240, 0.4047, 0.3054, 0.2786, 0.0489, 0.2220, 1.0000,
+	0.2930, 0.2407, 0.4105, 0.3607, 0.0186, 0.1861, 0.2707,  1.0000,
+	0.2995, 0.2863, 0.5191, 0.5007, 0.0782, 0.3355, 0.2302,  0.2950, 1.0000,
+	0.0760, 0.0702, 0.2784, 0.1988, 0.1147, 0.1021, 0.0931, -0.0438, 0.2087, 1.000
+)
+x = umx_lower2full(tmp, diag = TRUE)
+# check
+isSymmetric(x)
+
+# 2. Test with matrix input
 tmpn = c("ROccAsp", "REdAsp", "FOccAsp", "FEdAsp", "RParAsp", 
          "RIQ", "RSES", "FSES", "FIQ", "FParAsp")
 tmp = matrix(nrow = 10, ncol = 10, byrow = TRUE, dimnames = list(tmpn,tmpn), data = 
@@ -39,20 +61,10 @@ tmp = matrix(nrow = 10, ncol = 10, byrow = TRUE, dimnames = list(tmpn,tmpn), dat
 	0.2995, 0.2863, 0.5191, 0.5007, 0.0782, 0.3355, 0.2302,  0.2950, 1.0000, 0,
 	0.0760, 0.0702, 0.2784, 0.1988, 0.1147, 0.1021, 0.0931, -0.0438, 0.2087, 1)
 )
-umx_lower2full(tmp, diag= TRUE)
-tmp = c(
-	1.0000, 
-	0.6247, 1.0000,
-	0.3269, 0.3669, 1.0000,
-	0.4216, 0.3275, 0.6404, 1.0000,
-	0.2137, 0.2742, 0.1124, 0.0839, 1.0000,
-	0.4105, 0.4043, 0.2903, 0.2598, 0.1839, 1.0000,
-	0.3240, 0.4047, 0.3054, 0.2786, 0.0489, 0.2220, 1.0000,
-	0.2930, 0.2407, 0.4105, 0.3607, 0.0186, 0.1861, 0.2707,  1.0000,
-	0.2995, 0.2863, 0.5191, 0.5007, 0.0782, 0.3355, 0.2302,  0.2950, 1.0000,
-	0.0760, 0.0702, 0.2784, 0.1988, 0.1147, 0.1021, 0.0931, -0.0438, 0.2087, 1.000
-)
-umx_lower2full(tmp, diag = TRUE)
+x = umx_lower2full(tmp, diag= TRUE)
+isSymmetric(x)
+
+# 3. Test with lower-vector, no diagonal.
 tmp = c(
 	0.6247,
 	0.3269, 0.3669,
